Alterações com foto e outros

--- a/Index.html
+++ b/Index.html
@@ -9,18 +9,57 @@
 </head>
 
 <body>
+    <img src="imagens/adriano1.jpg">
     <h1>Quem sou eu:</h1>
     <p>Adriano G Carvalho</p>
+    <p>Professor da Área de Construção Civil do IFTO - Campus Palmas.</p>
+    <p>Discente do curso Superior em Sistemas para Internet.</p>
+    <p>Vamos elencar aqui uma citação bastante interessante dita por <cite>Marco Túlio Cícero</cite>: <q>Viver feliz não é mais do que viver com honestidade e retidão. </q></p>
+    <p></p>
     
     <h2>Meus Hobbies:</h2>
-    <p>Assistir séries, passear com a família, ir à praia.</p>
+    <p>Alguns hobbies que considero interessantes desenvolver em minhas horas vagas são: assistir séries, passear com a família, ir à praia.</p>
+    <p>A seguir apresento alguns links vinculados aos hobbies que tenho preferência:</p>
+    <p><a href="https://www.primevideo.com">Amazon Prime</a></p>
+    <p><a href="https://br.freepik.com/vetores-premium/familia-feliz-dos-desenhos-animados-passear-no-parque_6017480.htm">Passeando com a família</a></p>
+    <p><a href="https://www.onze.com.br/blog/ir-para-praia-sem-gastar-muito/">Indo a praia</a></p>
 
-    <h2>Meus projetos:</h2>
-    <p>Desenvolver trabalhos de desenvolvimentos de sistemas voltados à Engenharia Civil.</p>
+    <h2>Meu projeto:</h2>
+    <p>Trabalhar com o desenvolvimentos de sistemas voltados à Engenharia Civil.</p>
+
+    <h2>O que estou estudando atualmente</h2>
+    <p>
+        <table border="1">
+            <tbody>
+            <caption>Seguem as disciplinas da minha grade curricular atual:</caption>
+            <thead>
+                <tr>
+                    <td>Grade Curricular</td>
+                </tr> 
+            </thead>
+            <tr>
+                <th>Disciplinas Matriculadas</th>
+            </tr>
+            <tr>
+                <td><a href="http://www.ifto.edu.br/palmas/campus-palmas/cursos-palmas/graduacao/tecnologico/sistemas-para-internet/copy_of_grade-curricular/grade-curricular-tecnologia-em-sistemas-para-internet-1.pdf/view">Introdução à Programação</a></td>
+            </tr>
+            <tr>
+                <td><a href="http://www.ifto.edu.br/palmas/campus-palmas/cursos-palmas/graduacao/tecnologico/sistemas-para-internet/copy_of_grade-curricular/grade-curricular-tecnologia-em-sistemas-para-internet-1.pdf/view">Fundamentos e Projeto de Banco de Dados</a></td>
+            </tr>
+            <tr>
+                <td><a href="http://www.ifto.edu.br/palmas/campus-palmas/cursos-palmas/graduacao/tecnologico/sistemas-para-internet/copy_of_grade-curricular/grade-curricular-tecnologia-em-sistemas-para-internet-1.pdf/view">Programação Básica para WEB</a></td>
+            </tr>
+            </tbody>
+    </table></p>
     
     <h2>Contato:</h2>
-    <p>Email: agcarvalho@ifto.edu.br</p>
-    <!--Página criada em 10-08-2022 às 21:00hs.-->
+        <p>
+            <ul>
+                <li>Telefone: (63) 3236-4000</li>
+                <li>Email: agcarvalho@ifto.edu.br</li>
+                <li>Instagram: <a href="https://www.instagram.com/agcarvalho.eng/">adriano</a></li>
+            </ul>
+    <!--Página criada em 19-08-2022 às 12:00hs.-->
 </body>
 
 </html>
