--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img src="imagens/adriano1.jpg">
+    <a href="http://lattes.cnpq.br/8261115135036352"><img src="imagens/Foto_Adriano1.png" alt="Foto do Adriano" style="border-radius:60%" title="Conheça meu Currículo Lattes"></a>
     <h1>Quem sou eu:</h1>
     <p>Adriano G Carvalho</p>
     <p>Professor da Área de Construção Civil do IFTO - Campus Palmas.</p>
@@ -27,7 +27,7 @@
     <h2>Meu projeto:</h2>
     <p>Trabalhar com o desenvolvimentos de sistemas voltados à Engenharia Civil.</p>
 
-    <h2>O que estou estudando atualmente</h2>
+    <h2>O que estou estudando atualmente:</h2>
     <p>
         <table border="1">
             <tbody>
@@ -41,25 +41,24 @@
                 <th>Disciplinas Matriculadas</th>
             </tr>
             <tr>
-                <td><a href="http://www.ifto.edu.br/palmas/campus-palmas/cursos-palmas/graduacao/tecnologico/sistemas-para-internet/copy_of_grade-curricular/grade-curricular-tecnologia-em-sistemas-para-internet-1.pdf/view">Introdução à Programação</a></td>
+                <td><a href="Introducao_Prog.html">Introdução à Programação</a></td>
             </tr>
             <tr>
-                <td><a href="http://www.ifto.edu.br/palmas/campus-palmas/cursos-palmas/graduacao/tecnologico/sistemas-para-internet/copy_of_grade-curricular/grade-curricular-tecnologia-em-sistemas-para-internet-1.pdf/view">Fundamentos e Projeto de Banco de Dados</a></td>
+                <td><a href="Fundamentos_PB.html">Fundamentos e Projeto de Banco de Dados</a></td>
             </tr>
             <tr>
-                <td><a href="http://www.ifto.edu.br/palmas/campus-palmas/cursos-palmas/graduacao/tecnologico/sistemas-para-internet/copy_of_grade-curricular/grade-curricular-tecnologia-em-sistemas-para-internet-1.pdf/view">Programação Básica para WEB</a></td>
+                <td><a href="Programacao_WEB.html">Programação Básica para WEB</a></td>
             </tr>
             </tbody>
     </table></p>
-    
-    <h2>Contato:</h2>
+        <h2>Contato:</h2>
         <p>
             <ul>
                 <li>Telefone: (63) 3236-4000</li>
-                <li>Email: agcarvalho@ifto.edu.br</li>
+                <li>Email: <a href="mailto:agcarvalho@ifto.edu.br">Entre em contato por email</a></li>
                 <li>Instagram: <a href="https://www.instagram.com/agcarvalho.eng/">adriano</a></li>
             </ul>
-    <!--Página criada em 19-08-2022 às 12:00hs.-->
+    <!--Página criada em 21-08-2022 às 15:00hs.-->
 </body>
 
 </html>
