Versao final Plano

--- a/Fundamentos_PB.html
+++ b/Fundamentos_PB.html
@@ -42,7 +42,7 @@
         </ul>
     </p>
     <p>
-        <a href="Index.html">Retornar a página inicial</a>
+        <a href="index.html">Retornar a página inicial</a>
     </p>
         <!--Página criada em 21-08-2022 às 16:00hs.-->
 </body>
