--- a/Programacao_WEB.html
+++ b/Programacao_WEB.html
@@ -39,7 +39,7 @@
         </ul>
     </p>
     <p>
-        <a href="Index.html">Retornar a página inicial</a>
+        <a href="index.html">Retornar a página inicial</a>
     </p>
         <!--Página criada em 21-08-2022 às 16:30hs.-->
 </body>
